registration + login + db created

--- a/.env
+++ b/.env
@@ -30,5 +30,5 @@ APP_SECRET=22e2d42a56ea3a93d8a540260938d834
 # 
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL=mysql://root@localhost:3306/basis_applicatie?serverVersion=mariadb-10.1.37
 ###< doctrine/doctrine-bundle ###
