--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,5 +36,5 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
          - { path: /product/new, roles: ROLE_ADMIN }
-         - { path: /product/edit, roles: ROLE_ADMIN }
+         - { path: /edit, roles: ROLE_ADMIN }
 
